@@ -104,7 +104,7 @@ $dashconfTab = new CTabView();
 $dashconfTab->addTab('dashconfTab', _('Filter'), $dashconfFormList);
 
 $dashconfForm->addItem($dashconfTab);
-$dashconfForm->addItem(makeFormFooter(new CSubmit('save', _('Save'))));
+$dashconfForm->addItem(makeFormFooter(new CSubmit('save', _('Save')), array(new CButtonCancel())));
 
 $dashconfWidget->addItem($dashconfForm);
 
